--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>QUEM FOI PICASSO?</h2>
+                    <h2>QUEM FOI Pablo Picasso?</h2>
                     <p class="p-2">"Considerado um dos principais artistas do século XX, Pablo Picasso coleciona números impressionantes: em 78 anos de carreira, pintou mais de 13 mil quadros, realizou mais de 100 mil desenhos e mais de 300 esculturas.
                         Importante figura da história da arte, o espanhol inspirou-se em momentos da sua vida pessoal para criar grandiosas obras, como pode ser comprovado nas suas fases azul e rosa de produção, ocorridas nas primeiras décadas dos anos 1900.
                         Picasso é um dos fundadores do movimento cubista, que inovou a arte na época, por usar elementos geométricos e colagens. Além disso, o artista pintou o La Guernica, quadro tido como uma das maiores obras de protesto social já criadas. </p>
