--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/Picasso.PNG" aut="logo do nome Picasso" title="https://flamingtext.com.br/Name-Logos/Picasso/" 
+            <img src="Picasso.PNG" aut="logo do nome Picasso" title="https://flamingtext.com.br/Name-Logos/Picasso/" 
             " class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
