--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-5">
                     <h2>QUEM FOI Pablo Picasso?</h2>
-                    <p class="p-2">"Considerado um dos principais artistas do século XX, Pablo Picasso coleciona números impressionantes: em 78 anos de carreira, pintou mais de 13 mil quadros, realizou mais de 100 mil desenhos e mais de 300 esculturas.
+                    <p class="p-2">Considerado um dos principais artistas do século XX, Pablo Picasso coleciona números impressionantes: em 78 anos de carreira, pintou mais de 13 mil quadros, realizou mais de 100 mil desenhos e mais de 300 esculturas.
                         Importante figura da história da arte, o espanhol inspirou-se em momentos da sua vida pessoal para criar grandiosas obras, como pode ser comprovado nas suas fases azul e rosa de produção, ocorridas nas primeiras décadas dos anos 1900.
                         Picasso é um dos fundadores do movimento cubista, que inovou a arte na época, por usar elementos geométricos e colagens. Além disso, o artista pintou o La Guernica, quadro tido como uma das maiores obras de protesto social já criadas. </p>
                 </div>
@@ -95,7 +95,7 @@
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Entre em contato</h2>
+                    <h2 class="mb-3">Entre em contato para conhecer nossas galerias</h2>
                     <form>
                         <div class="form-group mb-3">
                             <label for="nome">Nome</label>
@@ -126,7 +126,7 @@
         <i class="bi bi-whatsapp"></i>
         <i class="bi bi-instagram"></i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
+        <p class="mt-3">Desenvolvido pela aluna Karine Matos.</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
