--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas </h1>
-                    <img src="pink Beige Vintagem picasso (2).pdf" class="mb-3" width="563"
+                    <img src="2.png" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#QUEM FOI PABLO PICASSO"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
