--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="PICASSO 1.webp"
+                        <img src="Picasso1.jpg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
