--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="muse-pablo-picasso.jpg" class="img-fluid rounded-5"
+                        <img src="pablo_picasso_MUSE" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
