--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="Pablo_picasso_1-removebg-preview.png" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
-
+                <img src="Pablo_picasso_1-removebg-preview.png" alt="Aupo, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                width="420"
               </div>
         </section>
 
@@ -72,7 +72,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="PICASSO 1.webp"
+                        <img src="CaP"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
