--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Entre em contato para conhecer nossas galerias!</h2>
+                    <h2 class="mb-3">Entre em contato para conhecer 
+                        nossas galerias!</h2>
                     <form>
                         <div class="form-group mb-3">
                             <label for="nome">Nome</label>
