--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="pablo_picasso_MUSE" class="img-fluid rounded-5"
+                        <img src="WhatsApp Image 2025-03-30 at 17.28.58.jpeg"img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="Pink Beige Vintage Scrapbook Presentation.jpg"img-fluid rounded-5" loading="lazy">
+                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                        <img src="WhatsApp Image 2025-03-30 at 17.30.03.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
