--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.28.58.jpeg"img-fluid rounded-5"
+                        <img src=" "img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"img-fluid rounded-5" loading="lazy">
+                        <img src=" "img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="WhatsApp Image 2025-03-30 at 17.30.03.jpeg"
