--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src=" "img-fluid rounded-5"
+                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
