--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
                         <img src="WhatsApp Image 2025-03-30 at 17.26.38.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
-                    <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.26.38.jpeg"img-fluid rounded-5"
-                            loading="lazy">
+                    <div class="row justify-content-md-center">
+                        <div class="col-md-4">
+                            <img src="WhatsApp Image 2025-03-30 at 17.42.23.jpeg"
+                                class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
