--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
        
     </header>
 
-
     <main class="container my-5">
 
         <section id="inicio" class="my-5">
@@ -47,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="Pablo_picasso_1-removebg-preview.png" alt="Aupo, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="Pablo_picasso_1-removebg-preview.png" alt="Picasso " title="Pablo Picasso. Pintor e escultor espanhol" class="img-fluid img-inicio">
                 width="420"
               </div>
         </section>
