--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="Pablo_picasso_1-removebg-preview.png" alt="Picasso " title="Pablo Picasso. Pintor e escultor espanhol" class="img-fluid img-inicio">
+                <img src="Pablo_picasso_1-removebg-preview.png" alt="Pablo Picasso" title="Pablo Picasso. Pintor e escultor espanhol" class="img-fluid img-inicio">
                 width="420"
               </div>
         </section>
@@ -94,8 +94,7 @@
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Entre em contato para conhecer 
-                        nossas galerias!</h2>
+                    <h2 class="mb-3">Entre em contato conosco!</h2>
                     <form>
                         <div class="form-group mb-3">
                             <label for="nome">Nome</label>
@@ -129,7 +128,7 @@
         <p class="mt-3">Desenvolvido pela aluna Karine Matos.</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
-    <script src="script.js"></script>
+    <script src="Script2.js"></script>
   
 </body>
 
