--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                         <img src="WhatsApp Image 2025-03-30 at 17.26.38.jpeg"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
+                     <div class="row justify-content-md-center"> 
                         <div class="col-md-4">
                             <img src="WhatsApp Image 2025-03-30 at 17.42.23.jpeg"
                                 class="img-fluid rounded-5" loading="lazy">
