--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                     </div>
                     <div class="col-md-4">
                         <img src="WhatsApp Image 2025-03-30 at 17.42.23.jpeg"
-                    </div>
+                        class="img-fluid rounded-5" loading="lazy">
+                   </div>
         </section>
 
         <section id="contato">
