--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas </h1>
-                    <img src="busque_ser_uma_pessoa_de_valor.-removebg-preview (1).png" class="mb-3" width="563"
+                    <img src="busque_ser_uma_pessoa_de_valor.-removebg-preview (1).png" alt= " " title=" "
+                    class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#QUEM FOI PABLO PICASSO"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
@@ -71,7 +72,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"
+                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"  alt= " " title=" "
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
