--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas </h1>
-                    <img src="busque_ser_uma_pessoa_de_valor.-removebg-preview (1).png" alt= " " title=" "
+                    <img src="busque_ser_uma_pessoa_de_valor.-removebg-preview (1).png" 
                     class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#QUEM FOI PABLO PICASSO"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="Pablo_picasso_1-removebg-preview.png" alt="Pablo Picasso" title="Pablo Picasso. Pintor e escultor espanhol" class="img-fluid img-inicio">
+                <img src="Pablo_picasso_1-removebg-preview.png" alt="https://polska-costa.com/post/pablo-picasso-imie-i-nazwisko-wielkiego-malarza?lang=en" title="Pablo Picasso. Pintor e escultor espanhol" class="img-fluid img-inicio">
                 width="420"
               </div>
         </section>
@@ -72,11 +72,12 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"  alt= " " title=" "
+                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"  alt= "https://www.theguardian.com/artanddesign/2011/apr/27/picasso-painting-lover-auction" title="Pintura de Picasso da amante Marie-Thérèse Walter"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.26.38.jpeg" class="img-fluid rounded-5"
+                        <img src="WhatsApp Image 2025-03-30 at 17.26.38.jpeg" alt="https://www.singulart.com/blog/es/2023/12/21/pinturas-famosas-de-pablo-picasso-2/" title=" Pintura dos Niñas Leyendo de Pablo Picasso"
+                        class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
