--- a/index.html
+++ b/index.html
@@ -72,21 +72,22 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"  alt= "https://www.theguardian.com/artanddesign/2011/apr/27/picasso-painting-lover-auction" title="Pintura de Picasso da amante Marie-Thérèse Walter"
+                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"  alt= "https://www.theguardian.com/artanddesign/2011/apr/27/picasso-painting-lover-auction" title="Pintura Amante Marie-Thérèse Walter Pablo Picasso"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.26.38.jpeg" alt="https://www.singulart.com/blog/es/2023/12/21/pinturas-famosas-de-pablo-picasso-2/" title=" Pintura dos Niñas Leyendo de Pablo Picasso"
+                        <img src="WhatsApp Image 2025-03-30 at 17.26.38.jpeg" alt="https://www.singulart.com/blog/es/2023/12/21/pinturas-famosas-de-pablo-picasso-2/" title=" Pintura Dos Niñas Leyendo de Pablo Picasso"
                         class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.30.03.jpeg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="WhatsApp Image 2025-03-30 at 17.30.03.jpeg" alt="https://arteref.com/arte/curiosidades/7-fatos-sobre-o-cubismo-de-pablo-picasso/" title="Pintura A Musa de Pablo Picasso"
+                        class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.42.23.jpeg"
+                        <img src="WhatsApp Image 2025-03-30 at 17.42.23.jpeg" alt="https://art-virtuoso.com/blogs/artistes-celebres/pablo-picasso" title="Pintura Natureza morta cubista de Pablo Picasso"
                         class="img-fluid rounded-5" loading="lazy">
                    </div>
         </section>
