--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"  alt= "https://www.theguardian.com/artanddesign/2011/apr/27/picasso-painting-lover-auction" title="Pintura Amante Marie-Thérèse Walter Pablo Picasso"
+                        <img src="WhatsApp Image 2025-03-30 at 17.29.35.jpeg"  alt= "https://www.theguardian.com/artanddesign/2011/apr/27/picasso-painting-lover-auction" title="Pintura a Amante Marie-Thérèse Walter de Pablo Picasso"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
@@ -87,7 +87,7 @@
                         class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="WhatsApp Image 2025-03-30 at 17.42.23.jpeg" alt="https://art-virtuoso.com/blogs/artistes-celebres/pablo-picasso" title="Pintura Natureza morta cubista de Pablo Picasso"
+                        <img src="WhatsApp Image 2025-03-30 at 17.42.23.jpeg" alt="https://art-virtuoso.com/blogs/artistes-celebres/pablo-picasso" title="Pintura Natureza Morta Cubista de Pablo Picasso"
                         class="img-fluid rounded-5" loading="lazy">
                    </div>
         </section>
